// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Section All stories should render successfully Renders Primary story 1`] = `
<body
  class="chakra-ui-light"
>
  <div>
    <div
      class="css-21eb5z"
    >
      <div
        class="css-17nws4k"
        id="section-1"
      >
        <div
          class="css-ag3wqc"
        >
          <div
            class="css-ojqyia"
          >
            <img
              alt="Background image - Red fabric"
              class="chakra-image css-o0922y"
              src="https://sunkenstudio-strapi-cms.nyc3.digitaloceanspaces.com/368ef30c049d5e73fc77113499547b2f.svg"
              typename="ComponentCommonImage"
            />
            <div
              class="css-irqulg"
            />
          </div>
        </div>
        <div
          class="css-1v0ni0h"
        >
          <div
            class="css-paz77w"
          >
            <div
              class="css-ihpfkw"
            >
              <div
                class="chakra-stack css-wj6om1"
              >
                <div
                  class="css-ojqyia"
                >
                  <img
                    alt="Craft cocktail with lemon twist"
                    class="chakra-image css-1yuvylm"
                    src="https://sunkenstudio-strapi-cms.nyc3.digitaloceanspaces.com/b181fb8a2e37c5523f5f625b11628738.avif"
                    typename="ComponentCommonImage"
                  />
                  <div
                    class="css-1x4xquk"
                  />
                </div>
                <p
                  class="chakra-text css-0"
                >
                  caption goes here
                </p>
              </div>
              <div
                class="css-192f3e9"
              >
                <h3
                  class="chakra-heading css-14v1f4s"
                >
                  What We Do
                </h3>
                <span>
                  Hosting a party? Need a bartender? I'm your girl! We'll create a custom cocktail menu for your event. 
                </span>
                <br />
                <br />
                <span>
                  From small events in your backyard to corporate parties, gallery openings, weddings, and local community events, let us supply your party with libations that will impress your guests.
                </span>
                <br />
                <br />
                <span>
                  Together we will create the perfect menu of cocktails, beer, and wine. Corridor Cocktails will make your bar dreams come true!
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <span
      hidden=""
      id="__chakra_env"
    />
  </div>
  <div
    class="chakra-portal"
  >
    <div
      aria-label="Notifications-top"
      aria-live="polite"
      id="chakra-toast-manager-top"
      role="region"
      style="position: fixed; z-index: var(--toast-z-index, 5500); pointer-events: none; display: flex; flex-direction: column; margin: 0px auto;"
    />
    <div
      aria-label="Notifications-top-left"
      aria-live="polite"
      id="chakra-toast-manager-top-left"
      role="region"
      style="position: fixed; z-index: var(--toast-z-index, 5500); pointer-events: none; display: flex; flex-direction: column;"
    />
    <div
      aria-label="Notifications-top-right"
      aria-live="polite"
      id="chakra-toast-manager-top-right"
      role="region"
      style="position: fixed; z-index: var(--toast-z-index, 5500); pointer-events: none; display: flex; flex-direction: column;"
    />
    <div
      aria-label="Notifications-bottom-left"
      aria-live="polite"
      id="chakra-toast-manager-bottom-left"
      role="region"
      style="position: fixed; z-index: var(--toast-z-index, 5500); pointer-events: none; display: flex; flex-direction: column;"
    />
    <div
      aria-label="Notifications-bottom"
      aria-live="polite"
      id="chakra-toast-manager-bottom"
      role="region"
      style="position: fixed; z-index: var(--toast-z-index, 5500); pointer-events: none; display: flex; flex-direction: column; margin: 0px auto;"
    />
    <div
      aria-label="Notifications-bottom-right"
      aria-live="polite"
      id="chakra-toast-manager-bottom-right"
      role="region"
      style="position: fixed; z-index: var(--toast-z-index, 5500); pointer-events: none; display: flex; flex-direction: column;"
    />
  </div>
</body>
`;

exports[`Section match snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body
    class="chakra-ui-light"
  >
    <div>
      <div
        class="css-17nws4k"
        id="section-1"
      >
        <div
          class="css-ag3wqc"
        >
          <div
            class="css-ojqyia"
          >
            <img
              alt="Background image - Red fabric"
              class="chakra-image css-o0922y"
              src="https://sunkenstudio-strapi-cms.nyc3.digitaloceanspaces.com/368ef30c049d5e73fc77113499547b2f.svg"
              typename="ComponentCommonImage"
            />
            <div
              class="css-irqulg"
            />
          </div>
        </div>
        <div
          class="css-1v0ni0h"
        >
          <div
            class="css-paz77w"
          >
            <div
              class="css-ihpfkw"
            >
              <div
                class="chakra-stack css-wj6om1"
              >
                <div
                  class="css-ojqyia"
                >
                  <img
                    alt="Craft cocktail with lemon twist"
                    class="chakra-image css-1yuvylm"
                    src="https://sunkenstudio-strapi-cms.nyc3.digitaloceanspaces.com/b181fb8a2e37c5523f5f625b11628738.avif"
                    typename="ComponentCommonImage"
                  />
                  <div
                    class="css-1x4xquk"
                  />
                </div>
                <p
                  class="chakra-text css-0"
                >
                  caption goes here
                </p>
              </div>
              <div
                class="css-192f3e9"
              >
                <h3
                  class="chakra-heading css-14v1f4s"
                >
                  What We Do
                </h3>
                <span>
                  Hosting a party? Need a bartender? I'm your girl! We'll create a custom cocktail menu for your event. 
                </span>
                <br />
                <br />
                <span>
                  From small events in your backyard to corporate parties, gallery openings, weddings, and local community events, let us supply your party with libations that will impress your guests.
                </span>
                <br />
                <br />
                <span>
                  Together we will create the perfect menu of cocktails, beer, and wine. Corridor Cocktails will make your bar dreams come true!
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <span
        hidden=""
        id="__chakra_env"
      />
    </div>
    <div
      class="chakra-portal"
    >
      <div
        aria-label="Notifications-top"
        aria-live="polite"
        id="chakra-toast-manager-top"
        role="region"
        style="position: fixed; z-index: var(--toast-z-index, 5500); pointer-events: none; display: flex; flex-direction: column; margin: 0px auto;"
      />
      <div
        aria-label="Notifications-top-left"
        aria-live="polite"
        id="chakra-toast-manager-top-left"
        role="region"
        style="position: fixed; z-index: var(--toast-z-index, 5500); pointer-events: none; display: flex; flex-direction: column;"
      />
      <div
        aria-label="Notifications-top-right"
        aria-live="polite"
        id="chakra-toast-manager-top-right"
        role="region"
        style="position: fixed; z-index: var(--toast-z-index, 5500); pointer-events: none; display: flex; flex-direction: column;"
      />
      <div
        aria-label="Notifications-bottom-left"
        aria-live="polite"
        id="chakra-toast-manager-bottom-left"
        role="region"
        style="position: fixed; z-index: var(--toast-z-index, 5500); pointer-events: none; display: flex; flex-direction: column;"
      />
      <div
        aria-label="Notifications-bottom"
        aria-live="polite"
        id="chakra-toast-manager-bottom"
        role="region"
        style="position: fixed; z-index: var(--toast-z-index, 5500); pointer-events: none; display: flex; flex-direction: column; margin: 0px auto;"
      />
      <div
        aria-label="Notifications-bottom-right"
        aria-live="polite"
        id="chakra-toast-manager-bottom-right"
        role="region"
        style="position: fixed; z-index: var(--toast-z-index, 5500); pointer-events: none; display: flex; flex-direction: column;"
      />
    </div>
  </body>,
  "container": <div>
    <div
      class="css-17nws4k"
      id="section-1"
    >
      <div
        class="css-ag3wqc"
      >
        <div
          class="css-ojqyia"
        >
          <img
            alt="Background image - Red fabric"
            class="chakra-image css-o0922y"
            src="https://sunkenstudio-strapi-cms.nyc3.digitaloceanspaces.com/368ef30c049d5e73fc77113499547b2f.svg"
            typename="ComponentCommonImage"
          />
          <div
            class="css-irqulg"
          />
        </div>
      </div>
      <div
        class="css-1v0ni0h"
      >
        <div
          class="css-paz77w"
        >
          <div
            class="css-ihpfkw"
          >
            <div
              class="chakra-stack css-wj6om1"
            >
              <div
                class="css-ojqyia"
              >
                <img
                  alt="Craft cocktail with lemon twist"
                  class="chakra-image css-1yuvylm"
                  src="https://sunkenstudio-strapi-cms.nyc3.digitaloceanspaces.com/b181fb8a2e37c5523f5f625b11628738.avif"
                  typename="ComponentCommonImage"
                />
                <div
                  class="css-1x4xquk"
                />
              </div>
              <p
                class="chakra-text css-0"
              >
                caption goes here
              </p>
            </div>
            <div
              class="css-192f3e9"
            >
              <h3
                class="chakra-heading css-14v1f4s"
              >
                What We Do
              </h3>
              <span>
                Hosting a party? Need a bartender? I'm your girl! We'll create a custom cocktail menu for your event. 
              </span>
              <br />
              <br />
              <span>
                From small events in your backyard to corporate parties, gallery openings, weddings, and local community events, let us supply your party with libations that will impress your guests.
              </span>
              <br />
              <br />
              <span>
                Together we will create the perfect menu of cocktails, beer, and wine. Corridor Cocktails will make your bar dreams come true!
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
    <span
      hidden=""
      id="__chakra_env"
    />
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
